[package]
name = "bcachefs-mount"
version = "0.1.0"
authors = ["Yuxuan Shui <yshuiv7@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
env_logger = "0.7"
anyhow = "1.0"
clap = "2.33"
udev = "0.4"
uuid = "0.8"
libc = "0.2.69"
gag = "0.1"
bitfield = "0.13"
memoffset = "0.5"
getset = "0.1"
itertools = "0.9"
structopt = "0.3"
parse-display = "0.1"
errno = "0.2"

[build-dependencies]
num_cpus = "1.13"
pkg-config = "0.3"
bindgen = "0.53"
